modificacion de rutas en index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica</title>
-    <link rel="icon" href="/images/joystic_icon.png">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="icon" href="./images/joystic_icon.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">    
@@ -18,31 +18,31 @@
         <div class="tittle"> <!-- Inicio .tittle -->
             <h1>Video Game Store</h1>
             <div id="soundtrack"> <!-- Inicion #soundtrack -->
-                <audio src="/audio/Super_Mario_Soundtrack.mp4" preload="auto" controls></audio>
+                <audio src="./audio/Super_Mario_Soundtrack.mp4" preload="auto" controls></audio>
                 <p>Soundtrack of the day: <span>Super Mario Bros.</span></p>
             </div> <!-- Cierre #soundtrack -->
         </div> <!-- Cierre .tittle -->
         <div class="user"> <!-- Cierre .user -->
-            <a href="/pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="/pages/user/login.html">login</a>
+            <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="./pages/user/login.html">login</a>
             <p> / </p>
-            <a href="/pages/user/register.html">register</a>
+            <a href="./pages/user/register.html">register</a>
         </div> <!-- Cierre .user -->
     </header>
 
     <nav class="navbar"> <!-- Inicio .navbar -->
         <ul>
             <li>
-                <a href="/index.html">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li>
-                <a href="/pages/news.html">Noticias</a>
+                <a href="./pages/news.html">Noticias</a>
             </li>
             <li>
-                <a href="/pages/products.html">Productos</a>                    
+                <a href="./pages/products.html">Productos</a>                    
             </li>
             <li>
-                <a href="/pages/contact.html">Contacto</a>
+                <a href="./pages/contact.html">Contacto</a>
             </li>
         </ul>
     </nav> <!-- Cierre .navbar -->
@@ -56,7 +56,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dolorem laborum minima quaerat, in consectetur reiciendis tenetur error temporibus magnam consequatur, odio, cumque impedit eveniet esse hic aliquam a aut.</p>
 
                 <figure>
-                    <img src="/images/mario_movie.webp" alt="New Super Mario Bros Movie" width="320px">
+                    <img src="./images/mario_movie.webp" alt="New Super Mario Bros Movie" width="320px">
                     <figcaption>The Super Mario Bros Movie. Estreno: 2023</figcaption>
                 </figure>
             </article> <!-- Fin del 1er articulo -->
@@ -72,7 +72,7 @@
                 <h2>Stray - primeros 8 minutos</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus dolorem laborum minima quaerat, in consectetur reiciendis tenetur error temporibus magnam consequatur, odio, cumque impedit eveniet esse hic aliquam a aut.</p>
 
-                <video src="/video/Stray Gameplay [4K 60FPS PC] - The First 8 Minutes.mp4" controls></video>
+                <video src="./video/Stray Gameplay [4K 60FPS PC] - The First 8 Minutes.mp4" controls></video>
             </article> <!-- Fin del 3er articulo -->
         </section>
     </main>
