modificacion de paleta de colores y creacion de barra de busqueda

--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
             </div> <!-- Cierre #soundtrack -->
         </div> <!-- Cierre .tittle -->
         <div class="user"> <!-- Cierre .user -->
-            <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="./pages/user/login.html">login</a>
-            <p> / </p>
-            <a href="./pages/user/register.html">register</a>
+            <div class="user-search">
+                <input type="text" placeholder="Buscar">
+                <i id="btn" class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="user-icons">
+                <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="./pages/user/login.html">login</a>
+                <p> / </p>
+                <a href="./pages/user/register.html">register</a>
+            </div>
         </div> <!-- Cierre .user -->
     </header>
 
@@ -77,6 +83,50 @@
                     <img src="./images/mario_movie.webp" alt="New Super Mario Bros Movie" width="320px">
                     <figcaption>The Super Mario Bros Movie. Estreno: 2023</figcaption>
                 </figure>
+
+                <br>
+                <hr>
+                <br>
+
+                <table border="4" cellpadding="5px" class="table"> <!-- Inicio de tabla -->
+                    <h3 class="table-tittle">Top 5 Consolas mas vendidas</h3>
+                    <tr>
+                        <th>Puesto</th>
+                        <th>Consola</th>
+                        <th>Año de salida</th>
+                        <th>Unidades vendidas</th>
+                    </tr>
+                    <tr>
+                        <td>#1</td>
+                        <td>Playstation 2</td>
+                        <td>2000</td>
+                        <td>159 Millones</td>
+                    </tr>
+                    <tr>
+                        <td>#2</td>
+                        <td>Nintendo DS</td>
+                        <td>2004</td>
+                        <td>154.02 Millones</td>
+                    </tr>
+                    <tr>
+                        <td>#3</td>
+                        <td>Game Boy / Game Boy Color</td>
+                        <td>1989</td>
+                        <td>118.69 Millones</td>
+                    </tr>
+                    <tr>
+                        <td>#4</td>
+                        <td>Playstation 4</td>
+                        <td>2013</td>
+                        <td>117.20 Millones</td>
+                    </tr>
+                    <tr>
+                        <td>#5</td>
+                        <td>Nintendo Switch</td>
+                        <td>2017</td>
+                        <td>111.08 Millones</td>
+                    </tr>
+                </table> <!-- Cierre de tabla -->
             </aside> <!-- Cierre .container-aside -->
         </div> <!-- Cierre .container -->
     </main>
