--- a/pages/products.html
+++ b/pages/products.html
@@ -51,6 +51,13 @@
 
     <footer>
         <p>Carlos Soto ::: &copy; 2022</p>
+        <div class="socialnetwork">
+            <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a target="_blank" href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+            <a target="_blank" href="https://www.twitch.tv/"><i class="fa-brands fa-twitch"></i></a>
+            <a target="_blank" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a target="_blank" href="https://twitter.com/?lang=es"><i class="fa-brands fa-square-twitter"></i></a>            
+        </div>
     </footer>
     
 </body>
