--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,15 +18,21 @@
         <div class="tittle"> <!-- Inicio .tittle -->
             <h1>Video Game Store</h1>
             <div id="soundtrack"> <!-- Inicion #soundtrack -->
-                <audio src="../audio/Super_Mario_Soundtrack.mp4" preload="auto" controls></audio>
+                <audio src="./audio/Super_Mario_Soundtrack.mp4" preload="auto" controls></audio>
                 <p>Soundtrack of the day: <span>Super Mario Bros.</span></p>
             </div> <!-- Cierre #soundtrack -->
         </div> <!-- Cierre .tittle -->
         <div class="user"> <!-- Cierre .user -->
-            <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="./user/login.html">login</a>
-            <p> / </p>
-            <a href="./user/register.html">register</a>
+            <div class="user-search">
+                <input type="text" placeholder="Buscar">
+                <i id="btn" class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="user-icons">
+                <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="./pages/user/login.html">login</a>
+                <p> / </p>
+                <a href="./pages/user/register.html">register</a>
+            </div>
         </div> <!-- Cierre .user -->
     </header>
 
@@ -47,7 +53,36 @@
         </ul>
     </nav> <!-- Cierre .navbar -->
 
-    <hr>
+    <main>
+        <form action="">
+            <fieldset>
+                <legend>Contacto</legend>
+
+                <label for="name">Nombre: </label>
+                <input type="text" name="name" placeholder="Escribre tu nombre" >
+
+                <label for="lastName">Apellido: </label>
+                <input type="text" name="lastName" placeholder="Escribre tu apellido" >
+
+                <label for="email">Email: </label>
+                <input type="email" name="email" placeholder="Escribre tu email" >
+
+                <label for="email">Tipo de consulta: </label>
+                <select>
+                    <option value="a">A</option>
+                    <option value="b">B</option>
+                    <option value="c">C</option>
+                </select>
+
+                <label for="message">Consulta: </label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+               <input type="submit" name="send" id="send">
+               <input type="reset" name="reset" id="reset">
+
+            </fieldset>
+        </form>
+    </main>
 
     <footer>
         <p>Carlos Soto ::: &copy; 2022</p>
