--- a/pages/user/login.html
+++ b/pages/user/login.html
@@ -27,10 +27,10 @@
             <div class="login-box">
                 <h2>Iniciar Sesion</h2>
 
-                <label for="mail">Ingrese su direccion de correo electronico</label>
+                <label for="mail">Dirección de e-mail</label>
                 <input type="mail" name="mail">
 
-                <label for="password">Ingrese su contrasena</label>
+                <label for="password">Contraseña</label>
                 <div class="password-box">
                     <input type="password" name="password" id="password-id">
                     <i class="fa-solid fa-eye-slash" id="password-eye"></i>
