cambios y creacion de register.html

--- a/pages/user/login.html
+++ b/pages/user/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica</title>
-    <link rel="icon" href="../../images/joystic_icon.png">
+    <link rel="icon" href="../../images/control-de-juego.png">
     <link rel="stylesheet" href="../../css/login.css">
     <link rel="stylesheet" href="../../css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,10 @@
             </div>
             <div class="login-register">
                 <p>No tienes cuenta aun? Registrate aca</p>
-                <button class="btn btn-register">Registrarse</button>
+                <a href="./register.html">
+                    <button class="btn btn-register">Registrarse</button>
+                </a>
+
             </div>
         </div>
     </main>
