--- a/pages/news.html
+++ b/pages/news.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica</title>
-    <link rel="icon" href="../images/joystic_icon.png">
+    <link rel="icon" href="../images/control-de-juego.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
         <h1 class="tittle">Video Game Store</h1>
         <div class="sub-tittle">
             <div id="soundtrack"> <!-- Inicion #soundtrack -->
-                <audio src="../audio/Super_Mario_Soundtrack.mp4" preload="auto" controls></audio>
+                <audio src="../../audio/Super_Mario_Soundtrack.mp4" preload="auto" controls></audio>
                 <p>Soundtrack of the day: <span>Super Mario Bros.</span></p>
             </div> <!-- Cierre #soundtrack -->
 
@@ -28,37 +28,55 @@
                     <i id="btn" class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <div class="user-icons">
-                    <a href="./pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <a href="./pages/user/login.html">login</a>
+                    <a href="../../pages/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="../../pages/user/login.html">login</a>
                     <p> / </p>
-                    <a href="./pages/user/register.html">register</a>
+                    <a href="../../pages/user/register.html">register</a>
                 </div>
             </div> <!-- Cierre .user -->
         </div>
         
     </header>
 
-    <nav class="navbar"> <!-- Inicio .navbar -->
-        <div id="burguer-menu" >
-            <i class="fa-solid fa-bars"></i>
+    <nav class="menu"> <!-- Inicio .navbar -->
+        <div id="burger-menu" >
+            <i class="fa-solid fa-bars" id="menu-bars"></i>
+            <div id="displayable-menu" class="undisplayed">
+                <ul id="burger-menu-displayed">
+                    <li>
+                        <a href="../../index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../../pages/news.html">Noticias</a>
+                    </li>
+                    <li>
+                        <a href="../../pages/products.html">Productos</a>                    
+                    </li>
+                    <li>
+                        <a href="../../pages/contact.html">Contacto</a>
+                    </li>
+                </ul>
+
+            </div>
+
         </div>
-        <div class="menu">
-            <ul>
+        <div class="menu-descktop">
+            <ul id="menu-descktop-displayed">
                 <li>
-                    <a href="../index.html">Home</a>
+                    <a href="../../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="./news.html">Noticias</a>
+                    <a href="../../pages/news.html">Noticias</a>
                 </li>
                 <li>
-                    <a href="./products.html">Productos</a>                    
+                    <a href="../../pages/products.html">Productos</a>                    
                 </li>
                 <li>
-                    <a href="./contact.html">Contacto</a>
+                    <a href="../../pages/contact.html">Contacto</a>
                 </li>
             </ul>
         </div>
-    </nav> <!-- Cierre .navbar -->    
+    </nav> <!-- Cierre .navbar -->
 
     <footer>
         <p>Carlos Soto ::: &copy; 2022</p>
